# ejercicios-python

./: README.md
01-funciones-metodos/: 01-index.py  02-index.py  03-index.py  04-index.py  05-index.py  06-index.py
01-funciones-metodos/retos/: ejercicio-01.py  ejercicio-02.py  ejercicio-03.py  ejercicio-04.py  ejercicio-05.py  ejercicio-06.py  ejercicio-07.py
02-estructura-datos/: index.py
03-algoritmos-basicos/: index.py
04-gestion-errores/: index.py
05-programacion-estructurada/: index.py
06-pool-orientado-objetos/: nota.md
project-fastapi/: docker-compose.yml  main.py  pyproject.toml
project-fastapi/test/: conftest.py  test_api.py  test_db.py  test_routes.py
