[project]
name = "project-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.3",
    "fastapi[standard]>=0.128.3",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.32",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
